eks/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 551028266469.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:970b4694ff3f66ebfe50070f6c008291fea0526d
        ports:
        - containerPort: 8080
